--- a/sharekaro_frontend/package.json
+++ b/sharekaro_frontend/package.json
@@ -10,12 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-social-login-buttons": "^3.6.1",
+    "reactjs-social-login": "^2.6.1",
     "uui": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
